--- a/styles/config/_666.css
+++ b/styles/config/_666.css
@@ -166,7 +166,8 @@ p {
 
 h1 {
   margin: 2rem 0 1rem;
-  font-family: '666';
+  font-family: 'GandurNew Light';
+  font-weight: normal;
   font-size: 6rem;
 
   .is-error & {
