--- a/styles/config/_fonts.css
+++ b/styles/config/_fonts.css
@@ -1,7 +1,7 @@
 @font-face {
-  font-family: "666";
-  src: url("/fonts/666.woff2") format("woff2"),
-       url("/fonts/666.woff") format("woff");
+  font-family: "GandurNew Light";
+  src: url("/fonts/GandurNew-Light.woff2") format("woff2"),
+       url("/fonts/GandurNew-Light.woff") format("woff");
   font-weight: normal;
   font-style: normal;
   font-display: swap;
