--- a/styles/utilities/_counters.css
+++ b/styles/utilities/_counters.css
@@ -18,15 +18,37 @@
   
   &--amount {
     position: relative;
-    background: none;
-    border: none;
-    border-radius: 0;
-    -webkit-appearance: none;
-    outline: none;
-
-    padding: 0;
+    overflow: hidden;
     width: 2rem;
-    text-align: center;
-    color: inherit;
+  }
+
+  &--input {
+    display: flex;
+    position: relative;
+    width: 100%;
+    height: 100%;
+
+    + .counter--input {
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+    }
+    
+    input {
+      position: relative;
+      background: none;
+      border: none;
+      border-radius: 0;
+      -webkit-appearance: none;
+      outline: none;
+
+      padding: 0;
+      width: 100%;
+      height: 100%;
+      text-align: center;
+      color: inherit;
+      font-feature-settings: "tnum";
+    }
   }
 }
