--- a/styles/utilities/_helpers.css
+++ b/styles/utilities/_helpers.css
@@ -78,3 +78,12 @@
     transform: scale(1.2);
   }
 }
+
+@keyframes spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
