--- a/theme.liquid
+++ b/theme.liquid
@@ -25,7 +25,7 @@
       if (/^\/a\//.test(l.pathname)) {
         // do nothing
       } else {    
-        var href = 'hull-666.vercel.app'
+        var href = '[your_frontsite_domain]'
         if (l.pathname) href += '/' + l.pathname
         if (l.hash) href += l.hash
         if (l.search) href += l.search
