--- a/styles/app.css
+++ b/styles/app.css
@@ -15,6 +15,7 @@
 @import "components/_marquee.css";
 @import "components/_page-transitions.css";
 @import "components/_cart.css";
+@import "components/_product.css";
 
 @import "utilities/_accordions.css";
 @import "utilities/_buttons.css";
