--- a/styles/config/_666.css
+++ b/styles/config/_666.css
@@ -87,6 +87,16 @@ body {
   max-width: 42rem;
 }
 
+.rc {
+  margin: 0 auto;
+  max-width: 42rem;
+
+  figure {
+    margin-top: 4rem;
+    margin-bottom: 4rem;
+  }
+}
+
 .marquee,
 .farquee {
   font-family: 'satan';
@@ -146,8 +156,36 @@ body {
 }
 
 .carousel {
-  max-width: 42rem;
   margin: 0 auto;
+
+  &--thumbs {
+    button {
+      border: 1px solid;
+
+      &::after {
+        content: '';
+        display: block;
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background: currentColor;
+        z-index: 1;
+        mix-blend-mode: difference;
+        transform: scaleY(0);
+        transform-origin: 0 0;
+        transition: transform .6s cubic-bezier(0.85, 0, 0.15, 1);
+      }
+
+      &.is-active {
+        &::after {
+          transform: none;
+          transform-origin: 0 100%;
+        }
+      }
+    }
+  }
 }
 
 .drawer {
@@ -203,7 +241,7 @@ h2, h3 {
   padding: 1em 2em;
   border: 1px solid;
   font-family: 'satan';
-  font-size: .666em;
+  font-size: .625em;
   text-transform: uppercase;
   letter-spacing: .15em;
 
@@ -221,6 +259,16 @@ h2, h3 {
       background: linear-gradient(45deg, transparent calc(50% - 1px), var(--pageText), transparent calc(50% + 1px)), linear-gradient(-45deg, transparent calc(50% - 1px), var(--pageText), transparent calc(50% + 1px));
       mix-blend-mode: difference;
     }
+  }
+}
+
+.control {
+  input[type="text"],
+  input[type="email"],
+  input[type="number"],
+  textarea,
+  &--label {
+    padding: .375em .5em
   }
 }
 
@@ -273,8 +321,55 @@ h2, h3 {
 }
 
 .product {
-  max-width: 50rem;
+  max-width: 42rem;
   margin: 0 auto;
+
+  &.has-gallery {
+    max-width: 80rem;
+  }
+
+  &--inner {
+    border-left: 1px solid;
+    border-right: 1px solid;
+  }
+  
+  &--gallery {
+    position: relative;
+    border-bottom: 1px solid;
+
+    @media (--sm) {
+      border-bottom: none;
+      border-right: 1px solid;
+    }
+
+    .carousel {
+      &--hud {
+        padding: 0 1rem 0 .5rem;  
+      }
+      
+      @media (--sm) {
+        position: absolute;
+        top: 1rem;
+        left: 1rem;
+        right: 1rem;
+        bottom: 1rem;
+        width: auto;
+
+        &--container,
+        &--photo,
+        .is-aspect {
+          height: 100%;
+        }
+
+        &--hud {
+          position: absolute;
+          bottom: 0;
+          width: 100%;
+          background: var(--pageBG);
+        }
+      }
+    }
+  }
   
   &--title {
     margin: 0;
