update compare price sync

--- a/styles/utilities/_media.css
+++ b/styles/utilities/_media.css
@@ -76,7 +76,7 @@ img.photo {
 
 @keyframes revealUp {
   from {
-    clip-path: inset(100% 0 0);
+    clip-path: inset(100% 0 0 0);
   }
   to {
     clip-path: inset(0% 0 0 0);
