--- a/styles/utilities/_media.css
+++ b/styles/utilities/_media.css
@@ -74,6 +74,23 @@ img.photo {
   }
 }
 
+.video-loop {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  
+  iframe {
+    position: absolute;
+    bottom: 50%;
+    left: 50%;
+    transform: translate(-50%,50%);
+    width: 100vw;
+    min-height: 100vh;
+  }
+}
+
 @keyframes revealUp {
   from {
     clip-path: inset(100% 0 0 0);
