--- a/styles/components/_product.css
+++ b/styles/components/_product.css
@@ -1,12 +1,14 @@
 .product {
   position: relative;
-  
-  &--inner {
-    .has-gallery & {
-      @media (--sm) {
-        display: grid;
-        grid-template-columns: 1.2fr 1.8fr;
-      }
+
+  &--price {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    span.is-discounted {
+      margin-left: .5rem;
+      font-size: .75rem;
     }
   }
 }
