--- a/styles/app.css
+++ b/styles/app.css
@@ -14,6 +14,7 @@
 @import "components/_hero.css";
 @import "components/_marquee.css";
 @import "components/_page-transitions.css";
+@import "components/_collection.css";
 @import "components/_cart.css";
 @import "components/_product.css";
 
