--- a/styles/utilities/_carousels.css
+++ b/styles/utilities/_carousels.css
@@ -105,4 +105,25 @@
       transition: all .4s cubic-bezier(0.16, 1, 0.3, 1);
     }
   }
+
+  &--dots {
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: flex;
+    flex-direction: column;
+    margin: 1rem;
+    
+    button {
+      @mixin flattenButton;
+      width: .75rem;
+      height: .75rem;
+      background: currentColor;
+      margin-bottom: 5px;
+
+      &.is-active {
+        /* active state styles */
+      }
+    }
+  }
 }
