--- a/styles/base/_typography.css
+++ b/styles/base/_typography.css
@@ -20,8 +20,8 @@ p {
     margin-bottom: 1.5rem;
   }
 
-  a {
-    text-decoration: none;
+  a:not(.btn) {
+    text-decoration: underline;
     color: inherit;
   }
 }
