--- a/styles/config/_666.css
+++ b/styles/config/_666.css
@@ -66,7 +66,12 @@ body {
   }
 
   .dropdown {
+    &--content {
+      padding-top: 1rem;
+    }
+    
     a:not(.btn) {
+      padding: .25em 0;
       font-size: 1.25rem;
       letter-spacing: .25em;
       color: inherit;
@@ -313,9 +318,13 @@ a[href="#content"].skip-link,
   font-family: Courier;
 }
 
-.logo {
-  margin: 2rem auto;
+.main-navigation {
+  flex: none;
+}
 
+.logo {
+  margin: 1rem auto;
+  
   &--link {
     height: 10rem;
     padding: .5rem;
@@ -617,7 +626,7 @@ a[href="#content"].skip-link,
 }
 
 .cart-toggle {
-  margin-top: 1rem;
+  margin: 1rem 0 2rem;
   
   span {
     display: none;
