better inventory state and schema markup, added cursor follow component

--- a/styles/config/_666.css
+++ b/styles/config/_666.css
@@ -223,6 +223,16 @@ body {
   }
 }
 
+.cursor {
+  span {
+    display: block;
+    width: 10rem;
+    height: 10rem;
+    background: var(--pageBG);
+    border-radius: 50%;
+  }
+}
+
 .drawer {
   &--title {
     font-family: 'satan';
