--- a/styles/app.css
+++ b/styles/app.css
@@ -22,6 +22,7 @@
 @import "utilities/_buttons.css";
 @import "utilities/_carousels.css";
 @import "utilities/_counters.css";
+@import "utilities/_cursor.css";
 @import "utilities/_drawers.css";
 @import "utilities/_dropdowns.css";
 @import "utilities/_forms.css";
