--- a/styles/app.css
+++ b/styles/app.css
@@ -1,37 +1,30 @@
-@import "config/_fonts.css";
+@import "_config/_variables";
+@import "_config/_mixins";
 
-@import "config/_mixins.css";
-@import "config/_variables.css";
+@import "base/_reset";
+@import "base/_typography";
+@import "base/_buttons";
+@import "base/_media";
+@import "base/_forms";
+@import "base/_page";
 
-@import "base/_reset.css";
-@import "base/_typography.css";
-@import "base/_page.css";
-@import "base/_grid.css";
+@import "components/_accordions";
+@import "components/_carousels";
+@import "components/_counters";
+@import "components/_cursors";
+@import "components/_drawers";
+@import "components/_dropdowns";
+@import "components/_marquees";
+@import "components/_page-transitions";
 
+@import "modules/_cart";
+@import "modules/_header";
+@import "modules/_footer";
 
-@import "components/_header.css";
-@import "components/_footer.css";
-@import "components/_hero.css";
-@import "components/_marquee.css";
-@import "components/_page-transitions.css";
-@import "components/_collection.css";
-@import "components/_cart.css";
-@import "components/_product.css";
+@import "modules/_collection";
+@import "modules/_product";
 
-@import "utilities/_accordions.css";
-@import "utilities/_buttons.css";
-@import "utilities/_carousels.css";
-@import "utilities/_counters.css";
-@import "utilities/_cursor.css";
-@import "utilities/_drawers.css";
-@import "utilities/_dropdowns.css";
-@import "utilities/_forms.css";
-@import "utilities/_media.css";
-@import "utilities/_helpers.css";
-
-@import "utilities/_shame.css";
-
-/* @import "utilities/selects"; */
+@import "_shame";
 
 /* Delete starter styles!! */
-@import "config/_666.css"
+@import "_config/_666";
