--- a/styles/base/_page.css
+++ b/styles/base/_page.css
@@ -1,10 +1,3 @@
-html,
-body {
-  -webkit-tap-highlight-color: transparent;
-  -webkit-font-smoothing: antialiased;
-  text-rendering: optimizeLegibility;
-}
-
 html {
   &.is-loading,
   &.is-loading * {
@@ -18,16 +11,9 @@ body {
 }
 
 .section {
-  position: relative;
-  padding: 4rem 0;
+  @apply relative py-16;
 
   &.is-error {
-    margin: 0;
-    min-height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    text-align: center;
+    @apply min-h-screen flex flex-col items-center justify-center text-center;
   }
 }
