--- a/styles/_config/_mixins.css
+++ b/styles/_config/_mixins.css
@@ -1,34 +1,10 @@
 .clean-btn {
-  @apply inline-block relative m-0 p-0 bg-transparent appearance-none no-underline;
+  @apply inline-block relative m-0 p-0 border-0 bg-transparent appearance-none no-underline cursor-pointer font-inherit text-center;
 }
 
 .sr-only {
-  @apply absolute;
-}
-
-@define-mixin flattenButton {
-  display: inline-block;
-  position: relative;
-  margin: 0;
-  padding: 0;
-  background: none;
-  -webkit-appearance: none !important;
-  border: none;
-  border-radius: 0;
-  text-decoration: none;
-  cursor: pointer;
-  font: inherit;
-  color: inherit;
-}
-
-@define-mixin sr-only {
-  position: absolute;
+  @apply absolute m-0 p-0 border-0 w-px h-px overflow-hidden;
   clip: rect(1px, 1px, 1px, 1px);
-  padding: 0;
-  border: 0;
-  height: 1px;
-  width: 1px;
-  overflow: hidden;
 }
 
 @define-mixin aspect-ratio $width: null, $height: null {
@@ -41,39 +17,5 @@
     width: 100%;
     height: 0;
     padding-bottom: calc(($height / $width) * 100%);
-  }
-}
-
-@define-mixin grid $size {
-  .is-col$(size)-12 {
-    grid-column: span 12;
-  }
-
-  .is-col$(size)-9 {
-    grid-column: span 9;
-  }
-
-  .is-col$(size)-8 {
-    grid-column: span 8;
-  }
-
-  .is-col$(size)-7 {
-    grid-column: span 7;
-  }
-
-  .is-col$(size)-6 {
-    grid-column: span 6;
-  }
-
-  .is-col$(size)-5 {
-    grid-column: span 5;
-  }
-
-  .is-col$(size)-4 {
-    grid-column: span 4;
-  }
-
-  .is-col$(size)-3 {
-    grid-column: span 3;
   }
 }
