--- a/styles/base/_buttons.css
+++ b/styles/base/_buttons.css
@@ -1,22 +1,20 @@
 .btn {
-  @mixin flattenButton;
-  text-align: center;
+  @apply clean-btn leading-none;
 
   &.is-small {
-    font-size: .5em;
+    @apply text-xs;
   }
 
   &.is-block {
-    display: block;
-    width: 100%;
+    @apply block w-full;
   }
 
   &.is-loading {
-    cursor: wait !important;
+    @apply cursor-wait !important;
   }
 
   &.is-disabled {
-    cursor: default;
+    @apply cursor-default;
   }
 
   svg {
