--- a/styles/base/_media.css
+++ b/styles/base/_media.css
@@ -1,10 +1,5 @@
-figure {
-  margin: 0;
-}
-
 .is-aspect {
-  position: relative;
-  overflow: hidden;
+  @apply relative overflow-hidden;
   
   &--square {
     @mixin aspect-ratio 1,1;
@@ -20,74 +15,45 @@ figure {
 
   &--custom {
     &::before {
+      @apply block absolute top-0 left-0 w-full h-full;
       content: "";
-      display: block;
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
     }
   }
 
   &::before {
-    background: var(--pageText);
-    z-index: 0;
+    @apply bg-pageText z-0;
   }
 
   &.has-error {
     &::after {
+      @apply absolute top-1/2 left-1/2 transform-gpu -translate-x-1/2 -translate-y-1/2 text-center text-4xl;
       content: '#$!';
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%,-50%);
-      font-size: 2rem;
-      text-align: center;
     }
 
     img {
-      display: none;
+      @apply hidden;
     }
   }
 }
 
 img.photo {
-  display: block;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%) scale(1.2);
+  @apply block absolute top-1/2 left-1/2 transform-gpu -translate-x-1/2 -translate-y-1/2 scale-125 object-cover opacity-0 z-10;
   width: calc(100% + 1px);
   height: calc(100% + 1px);
-  object-fit: cover;
-
-  opacity: 0;
-  z-index: 1;
   transition: opacity .15s linear, transform 1s cubic-bezier(.215,.61,.355,1);
 
   &.is-loaded,
   .is-loaded & {
-    opacity: 1;
-    transform: translate(-50%, -50%) scale(1);
+    @apply opacity-100 transform-gpu -translate-x-1/2 -translate-y-1/2 scale-100;
     animation: revealUp .6s cubic-bezier(0.85, 0, 0.15, 1) both;
   }
 }
 
 .video-loop {
-  position: absolute;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
+  @apply absolute inset-0;
   
   iframe {
-    position: absolute;
-    bottom: 50%;
-    left: 50%;
-    transform: translate(-50%,50%);
-    width: 100vw;
-    min-height: 100vh;
+    @apply absolute bottom-1/2 left-1/2 transform-gpu -translate-x-1/2 -translate-y-1/2 w-screen min-h-screen;
   }
 }
 
