--- a/styles/components/_drawers.css
+++ b/styles/components/_drawers.css
@@ -1,38 +1,16 @@
 .drawer {
-  position: fixed;
-  right: 0;
-  top: 0;
-  bottom: 0;
-  width: 100%;
-  max-width: 40rem;
-  background: var(--pageText);
-  color: var(--pageBG);
-  z-index: 10;
+  @apply fixed top-0 right-0 bottom-0 w-full max-w-2xl z-50 bg-pageText text-pageBG;
 
   &--backdrop {
-    display: block;
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background: rgba(0,0,0, .85);
-    z-index: 9;
+    @apply block fixed inset-0 bg-black bg-opacity-80 z-40;
   }
 
   &--inner {
-    display: flex;
-    flex-direction: column;
-    position: relative;
-    height: 100%;
+    @apply flex flex-col relative h-full;
   }
 
   &--header {
-    display: flex;
-    align-items: center;
-    position: relative;
-    padding: 1rem;
-    border-bottom: 1px solid;
+    @apply flex items-center relative p-4 border-0 border-b border-solid;
   }
 
   &--close {
@@ -40,13 +18,10 @@
   }
 
   &--title {
-    margin-right: auto;
+    @apply mr-auto;
   }
 
   &--content {
-    flex: 1;
-    overflow-y: scroll;
-    -webkit-overflow-scrolling: touch;
-    padding: 1rem;
+    @apply flex-1 overflow-y-scroll p-4;
   }
 }
